--- a/src/index.css
+++ b/src/index.css
@@ -33,8 +33,12 @@ html, body {
   left: 0;
   right: 0;
   width: 100vw;
+  min-height: env(safe-area-inset-top, 20px);
+  min-height: constant(safe-area-inset-top, 20px);
   height: env(safe-area-inset-top, 20px);
   height: constant(safe-area-inset-top, 20px);
+  max-height: env(safe-area-inset-top, 60px);
+  max-height: constant(safe-area-inset-top, 60px);
   background-color: #18181b !important;
   background: #18181b !important;
   background-image: none !important;
